--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,9 @@ flask-admin = "*"
 typing-extensions = "*"
 flask-jwt-extended = "==4.6.0"
 wtforms = "==3.1.2"
+google-api-python-client = "*"
+google-auth = "*"
+google-auth-oauthlib = "*"
 
 [requires]
 python_version = "3.10"
