client_secret_831312741763-kms5gcpkleiuf1m4pnnsn97kr71ki2ci.apps.googleusercontent.com.json

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ database.database
 database.db
 diagram.png
 __pycache__/
+client_secret_831312741763-kms5gcpkleiuf1m4pnnsn97kr71ki2ci.apps.googleusercontent.com
