--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ database.db
 diagram.png
 __pycache__/
 client_secret_831312741763-kms5gcpkleiuf1m4pnnsn97kr71ki2ci.apps.googleusercontent.com
+.env
