--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ wtforms = "==3.1.2"
 google-api-python-client = "*"
 google-auth = "*"
 google-auth-oauthlib = "*"
+flask-session = "*"
 
 [requires]
 python_version = "3.10"
