--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ google-api-python-client = "*"
 google-auth = "*"
 google-auth-oauthlib = "*"
 flask-session = "*"
+requests = "*"
 
 [requires]
 python_version = "3.10"
