--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"bootstrap": "^5.3.3",
+		"gapi-script": "^1.2.0",
+		"googleapis": "^144.0.0",
 		"prop-types": "^15.6.1",
 		"react": "^19.0.0",
 		"react-calendar": "^5.1.0",
